# phyron-skia-canvas

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  justfile  package-lock.json  package.json
.github/workflows/: bp-rust-ci.yml  bp-rust-napi-build.yml  bp-rust-release.yml  build.yml  containers.yml  crates-io-publish.yml  publish.yml  test.yml
containers/: Dockerfile.glibc  Dockerfile.musl  freetype.cfg  install-fontlibs.sh  use-static-fontconfig.patch
docs/: getting-started.md  index.md
docs/api/: app.md  canvas.md  context.md  font-library.md  image.md  imagedata.md  index.md  native-rust.md  path2d.md  window.md
docs/superpowers/plans/: 2026-05-01-native-rust-api-boundary.md  2026-05-01-studio-renderer-native-api-gap-closure.md
examples/: basic_render.rs
lib/: browser.js  index.d.ts  index.js  index.mjs  prebuild.mjs  urls.js
lib/classes/: canvas.js  context.js  css.js  filter.js  geometry.js  gui.js  imagery.js  neon.js  path.js  typography.js
scripts/: bp-check-all.sh
src/: bdf_stub.c  canvas.rs  color_filter.rs  filter.rs  font_library.rs  gradient.rs  image.rs  image_filter.rs  lib.rs  paragraph.rs  path.rs  pattern.rs  texture.rs  typography.rs  utils.rs
src/context/: api.rs  mod.rs  page.rs
src/gpu/: metal.rs  mod.rs
src/gpu/vulkan/: engine.rs  mod.rs  renderer.rs
src/gui/: app.rs  event.rs  mod.rs  window.rs  window_mgr.rs
src/native/: backend.rs  color.rs  error.rs  filter.rs  font.rs  geometry.rs  image.rs  mod.rs  paint.rs  path.rs  pixels.rs  recorder.rs  shader.rs  surface.rs  text.rs
tests/: native_api_contract.rs  native_studio_renderer_adapter.rs  native_studio_renderer_contract.rs
tests/runner/: index.d.ts  index.js
tests/suite/: canvas.test.js  context2d.test.js  media.test.js  paragraph.test.js  path2d.test.js
tests/visual/: index.html  index.js  tests.js
