[package]
name = "phyron-skia-canvas"
version = "3.3.0"
description = "A canvas environment for Node"
authors = [
    "Christian Swinehart <drafting@samizdat.co>",
    "Moritz Moeller <virtualritz@protonmail.com>",
]
license = "MIT"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[features]
freetype = ["skia-safe/embed-freetype", "skia-safe/freetype-woff2"]
metal = [
    "skia-safe/metal",
    "dep:metal",
    "dep:raw-window-handle",
    "dep:raw-window-metal",
    "dep:core-graphics-types",
    "dep:cocoa",
    "dep:objc",
]
vulkan = ["skia-safe/vulkan", "winit/rwh_05", "dep:ash", "dep:vulkano"]
window = ["dep:winit", "dep:spin_sleep"]

[dependencies]
allsorts = { version = "0.16", features = ["flate2_zlib"], default-features = false }

# vulkan
ash = { version = "0.38", optional = true }
cocoa = { version = "0.26", optional = true }
core-graphics-types = { version = "0.2", optional = true }
crc = "3"
crossbeam = "0.8"
css-color = "0.2"
dashmap = "6"
little_exif = "0.6"

# metal
metal = { version = "0.33", optional = true }
neon = "1"
objc = { version = "0.2", optional = true }
once_cell = "1"
process_path = "0.1"
raw-window-handle = { version = "0.6", optional = true }
raw-window-metal = { version = "1", optional = true }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
skia-safe = { version = "0.91.1", features = ["textlayout", "webp", "svg"] }
spin_sleep = { version = "1", optional = true }
vulkano = { version = "0.35", optional = true }

# windowing
winit = { version = "0.30", features = ["serde"], optional = true }

[build-dependencies]
cc = "1"

[profile.release]
lto = "fat"
codegen-units = 1
