[package]
name = "skia-canvas"
version = "0.1.0"
description = "GPU-accelerated, multi-threaded HTML Canvas-compatible 2D rendering for Rust and Node, powered by Skia."
authors = [
    "Christian Swinehart <drafting@samizdat.co>",
    "Moritz Moeller <virtualritz@protonmail.com>",
]
license = "MIT"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/phyrondev/phyron-skia-canvas"
homepage = "https://github.com/phyrondev/phyron-skia-canvas"
documentation = "https://docs.rs/skia-canvas"
readme = "README.md"
keywords = ["canvas", "skia", "graphics", "gpu", "rendering"]
categories = ["graphics", "rendering", "multimedia::images"]
include = [
    "/src/**/*.rs",
    "/src/bdf_stub.c",
    "/Cargo.toml",
    "/build.rs",
    "/LICENSE",
    "/README.md",
    "/CHANGELOG.md",
    "/docs/api/native-rust.md",
    "/tests/native_api_contract.rs",
    "/examples/**/*.rs",
]

[lib]
# Build both a C dynamic library (for the Node/Neon addon that
# `napi-rs`-style consumers dlopen) and a regular Rust rlib so
# downstream Rust crates can depend on the pure-Rust types directly.
# The Neon-specific `#[neon::main]` entry point is feature-gated
# below so Rust-only consumers opt out of the Node addon registration.
crate-type = ["cdylib", "rlib"]

[features]
# Default to the lean Rust library surface. Enable `node-addon` to
# build the cdylib as a Node.js addon (registers `#[neon::main]`).
default = []

# Registers the Neon `#[neon::main]` entry point and the export
# table that Node.js consults when dlopen'ing the resulting cdylib.
node-addon = []

freetype = ["skia-safe/embed-freetype", "skia-safe/freetype-woff2"]
metal = [
    "skia-safe/metal",
    "dep:metal",
    "dep:raw-window-handle",
    "dep:raw-window-metal",
    "dep:core-graphics-types",
    "dep:cocoa",
    "dep:objc",
]
vulkan = ["skia-safe/vulkan", "winit/rwh_05", "dep:ash", "dep:vulkano"]
window = ["dep:winit", "dep:spin_sleep"]

[package.metadata.docs.rs]
# docs.rs builds Linux-only; surface the Rust API plus the bits Linux
# can compile. The Neon-side modules are `#[doc(hidden)]` in `lib.rs`,
# so docs.rs effectively shows the `native` facade.
features = ["vulkan", "window", "freetype"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
allsorts = { version = "0.16", features = [
    "flate2_zlib",
], default-features = false }

# vulkan
ash = { version = "0.38", optional = true }
cocoa = { version = "0.26", optional = true }
core-graphics-types = { version = "0.2", optional = true }
crc = "3"
crossbeam = "0.8"
css-color = "0.2"
dashmap = "6"
little_exif = "0.6"

# metal
metal = { version = "0.33", optional = true }
neon = "1"
objc = { version = "0.2", optional = true }
once_cell = "1"
parking_lot = "0.12"
process_path = "0.1"
raw-window-handle = { version = "0.6", optional = true }
raw-window-metal = { version = "1", optional = true }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
skia-safe = { version = "0.93.1", features = ["textlayout", "webp", "svg"] }
spin_sleep = { version = "1", optional = true }
vulkano = { version = "0.35", optional = true }

# windowing
winit = { version = "0.30", features = ["serde"], optional = true }

[dev-dependencies]
anyhow = "1"

[build-dependencies]
cc = "1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
